<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.ProfileEditActivity">

    <TextView
        android:id="@+id/textViewProfileEditPage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:padding="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/buttonSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/black"
        android:padding="12dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/hint_color"
        app:layout_constraintBottom_toBottomOf="@id/textViewProfileEditPage"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/textViewProfileEditPage"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/imageViewCard"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cardCornerRadius="30dp"
                app:cardBackgroundColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:id="@+id/imageViewUserProfileSelect"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/logo"
                    android:scaleType="fitCenter"
                    android:padding="5dp"
                    android:contentDescription="@string/app_name"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textColor="@color/black"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageViewCard"/>

            <EditText
                android:id="@+id/eName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_background_drawable"
                android:padding="8dp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:inputType="text"
                android:autofillHints="text"
                app:layout_constraintStart_toStartOf="@id/textViewName"
                app:layout_constraintEnd_toEndOf="@id/textViewName"
                app:layout_constraintTop_toBottomOf="@id/textViewName"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/email_id"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="@id/textViewName"
                app:layout_constraintEnd_toEndOf="@id/textViewName"
                app:layout_constraintTop_toBottomOf="@id/eName"/>

            <EditText
                android:id="@+id/eEmailAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_background_drawable"
                android:padding="8dp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                app:layout_constraintStart_toStartOf="@id/textViewName"
                app:layout_constraintEnd_toEndOf="@id/textViewName"
                app:layout_constraintTop_toBottomOf="@id/textViewEmail"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textViewDOB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="@id/textViewName"
                app:layout_constraintEnd_toEndOf="@id/textViewName"
                app:layout_constraintTop_toBottomOf="@id/eEmailAddress"/>

            <EditText
                android:id="@+id/eDateOfBirth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_background_drawable"
                android:padding="8dp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:enabled="false"
                android:clickable="false"
                android:inputType="date"
                android:autofillHints="text"
                app:layout_constraintStart_toStartOf="@id/textViewName"
                app:layout_constraintEnd_toEndOf="@id/textViewName"
                app:layout_constraintTop_toBottomOf="@id/textViewDOB"
                tools:ignore="LabelFor" />

            <ImageView
                android:id="@+id/imageViewChooseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calendar"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintEnd_toEndOf="@id/eDateOfBirth"
                app:layout_constraintTop_toTopOf="@id/eDateOfBirth"
                app:layout_constraintBottom_toBottomOf="@id/eDateOfBirth"/>

            <TextView
                android:id="@+id/textViewGender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="@id/textViewName"
                app:layout_constraintEnd_toEndOf="@id/textViewName"
                app:layout_constraintTop_toBottomOf="@id/imageViewChooseDate"/>

            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@id/textViewName"
                app:layout_constraintEnd_toEndOf="@id/textViewName"
                app:layout_constraintTop_toBottomOf="@id/textViewGender">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male"
                    android:textColor="@color/black"/>

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female"
                    android:textColor="@color/black"/>

            </RadioGroup>


            <TextView
                android:id="@+id/textViewMarital"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/marital_status"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="@id/textViewName"
                app:layout_constraintEnd_toEndOf="@id/textViewName"
                app:layout_constraintTop_toBottomOf="@id/radioGroupGender"/>

            <RadioGroup
                android:id="@+id/radioGroupMarital"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@id/textViewName"
                app:layout_constraintEnd_toEndOf="@id/textViewName"
                app:layout_constraintTop_toBottomOf="@id/textViewMarital">

                <RadioButton
                    android:id="@+id/radioSingle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/single"
                    android:textColor="@color/black"/>

                <RadioButton
                    android:id="@+id/radioMarried"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/married"
                    android:textColor="@color/black"/>

                <RadioButton
                    android:id="@+id/radioOtherMarried"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/other"
                    android:textColor="@color/black"/>

            </RadioGroup>

            <TextView
                android:id="@+id/textViewWorking"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/working"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="@id/textViewName"
                app:layout_constraintEnd_toEndOf="@id/textViewName"
                app:layout_constraintTop_toBottomOf="@id/radioGroupMarital"/>

            <RadioGroup
                android:id="@+id/radioGroupWorking"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@id/textViewName"
                app:layout_constraintEnd_toEndOf="@id/textViewName"
                app:layout_constraintTop_toBottomOf="@id/textViewWorking">

                <RadioButton
                    android:id="@+id/radioSchool"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/school"
                    android:textColor="@color/black"/>

                <RadioButton
                    android:id="@+id/radioJob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/job"
                    android:textColor="@color/black"/>

                <RadioButton
                    android:id="@+id/radioOtherWork"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/other"
                    android:textColor="@color/black"/>

            </RadioGroup>

            <TextView
                android:id="@+id/textViewHonest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/honest"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="@id/textViewName"
                app:layout_constraintEnd_toEndOf="@id/textViewName"
                app:layout_constraintTop_toBottomOf="@id/radioGroupWorking"/>

            <RadioGroup
                android:id="@+id/radioGroupHonest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@id/textViewName"
                app:layout_constraintEnd_toEndOf="@id/textViewName"
                app:layout_constraintTop_toBottomOf="@id/textViewHonest">

                <RadioButton
                    android:id="@+id/radioSmoke"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/smoke"
                    android:textColor="@color/black"/>

                <RadioButton
                    android:id="@+id/radioDrink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/drink"
                    android:textColor="@color/black"/>

                <RadioButton
                    android:id="@+id/radioBoth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/both"
                    android:textColor="@color/black"/>

                <RadioButton
                    android:id="@+id/radioNone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/none"
                    android:textColor="@color/black"/>

            </RadioGroup>

            <TextView
                android:id="@+id/textViewInterest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/interest"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintStart_toStartOf="@id/textViewName"
                app:layout_constraintEnd_toEndOf="@id/textViewName"
                app:layout_constraintTop_toBottomOf="@id/radioGroupHonest"/>

            <RadioGroup
                android:id="@+id/radioGroupInterest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@id/textViewName"
                app:layout_constraintEnd_toEndOf="@id/textViewName"
                app:layout_constraintTop_toBottomOf="@id/textViewInterest">

                <RadioButton
                    android:id="@+id/radioMaleInterest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Male"
                    android:textColor="@color/black"/>

                <RadioButton
                    android:id="@+id/radioFemaleInterest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Female"
                    android:textColor="@color/black"/>

            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>