<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".auth.SignInActivity">

    <ImageView
        android:id="@+id/imageViewSignIn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/ePhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:autofillHints="none"
        android:textColorHint="@color/hint_color"
        android:textColor="@color/black"
        android:padding="8dp"
        android:inputType="phone"
        android:maxLength="10"
        android:background="@drawable/edit_background_drawable"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/imageViewSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonGetOtp"/>

    <TextView
        android:id="@+id/buttonGetOtp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/get_otp"
        android:background="@drawable/button_background_drawable"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:gravity="center"
        android:layout_marginBottom="100dp"
        app:layout_constraintStart_toStartOf="@id/ePhoneNumber"
        app:layout_constraintEnd_toEndOf="@id/ePhoneNumber"
        app:layout_constraintTop_toBottomOf="@id/ePhoneNumber"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>