<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.ChatActivity">

    <TextView
        android:id="@+id/textViewChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chat"
        android:textColor="@color/black"
        android:padding="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/hint_color"
        app:layout_constraintBottom_toBottomOf="@id/textViewChat"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewChat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/textViewChat"
        app:layout_constraintBottom_toTopOf="@id/editView"/>

    <View
        android:id="@+id/editView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@drawable/edit_background_drawable"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <EditText
        android:id="@+id/eTextWrite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/write_here"
        android:textColorHint="@color/hint_color"
        android:textColor="@color/black"
        android:inputType="text"
        android:autofillHints="text"
        android:padding="10dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@id/buttonSendImage"
        app:layout_constraintStart_toStartOf="@id/editView"
        app:layout_constraintTop_toTopOf="@id/editView"
        app:layout_constraintBottom_toBottomOf="@id/editView"/>

    <ImageView
        android:id="@+id/buttonSendImage"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/round_send"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/editView"
        app:layout_constraintBottom_toBottomOf="@id/editView"/>

</androidx.constraintlayout.widget.ConstraintLayout>