<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".auth.GetOtpActivity">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/verification"
        android:layout_marginStart="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/imageViewLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageViewLogo"
        app:layout_constraintBottom_toBottomOf="@id/imageViewLogo"/>

    <com.chaos.view.PinView
        android:id="@+id/firstPinView"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cursorColor="@color/purple_500"
        app:cursorWidth="2dp"
        app:hideLineWhenFilled="true"
        app:itemCount="6"
        app:itemHeight="48dp"
        app:itemWidth="48dp"
        app:lineColor="@color/purple_500"
        app:lineWidth="2dp"
        app:viewType="rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/buttonVerified"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@drawable/button_background_drawable"
        app:layout_constraintStart_toStartOf="@id/firstPinView"
        app:layout_constraintEnd_toEndOf="@id/firstPinView"
        app:layout_constraintTop_toBottomOf="@id/firstPinView"/>

</androidx.constraintlayout.widget.ConstraintLayout>